2006-07-30  Andreas Köhler  <andi5.py@gmx.net>

	* src/gnome-utils/gnc-gnome-utils.c:
	* src/gnome-utils/glade/preferences.glade:
	* src/gnome/schemas/apps_gnucash_general.schemas.in: Add new
	  setting general/show_splash_screen to
	  preferences_dialog->General and only show the splash screen if
	  it is TRUE. Fixes 339876.

	* src/gnome/gnc-plugin-page-account-tree.c:
	* src/gnome/gnc-plugin-page-register.c:
	* src/gnome/gnc-plugin-basic-commands.c:
	* src/gnome-utils/glade/preferences.glade: Fixed some duplicate
	  accelerators.

	* src/gnome-utils/gnc-main-window.c:
	* src/gnome/schemas/apps_gnucash_general.schemas.in:
	* src/gnome-utils/glade/preferences.glade: Add preference
	  general/tab_position to choose the edge of the notebook the tabs
	  will be showed (top, bottom, left or right). Add it to
	  preferences_dialog->Windows. Move "Show close button on notebook
	  tabs" from General to Windows. Fixes #340299.

2006-07-24  Derek Atkins  <derek@ihtfp.com>

	* [lots of Makefile.am files]:
	  Allow proper compile/install from tarball using separate builddir.
	  - Don't distribute (most) generated files.
	  - Be (more) consistent about when generated files are cleaned.

	* po/POTFILES.skip:
	  - Now that we distribute the SX schema properly, don't skip it
	    in the POTFILES.skip file.

2006-07-23  Andreas Köhler  <andi5.py@gmx.net>

	* src/gnome-utils/gnc-tree-view.c: Correctly set column sort
	  orders from gconf. Fixes #348248.

2006-07-22  Derek Atkins  <derek@ihtfp.com>

	* configure.in: check for SLIB.  (#347922)

2006-07-21  Andreas Köhler  <andi5.py@gmx.net>

	* configure.in:
	* src/gnome-utils/gnc-main-window.c: Make tabs within one notebook
	  reorderable by dnd for gtk>=2.10. Fixes #343454.

2006-07-18   Christian Stimming <stimming@tuhh.de>

	* src/gnc-module/gnc-module.c: On windows, deactivate gnucash's
	extra de-quoting of path names that is done on the GNC_MODULE_PATH
	env variable.

2006-07-16  Derek Atkins  <derek@ihtfp.com>
